# PrivacySuite-Core-SDK

./: Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/diagrams/: README.md
docs/research/: sdk-adoption-audit.md
privacysuite-ffi/: Cargo.toml
privacysuite-ffi/android/: build-aar.sh
privacysuite-ffi/android/ffi/src/main/: AndroidManifest.xml
privacysuite-ffi/src/: lib.rs
src/: auth.rs  crdt.rs  error.rs  lib.rs  networking.rs  storage.rs  sync.rs
src/crypto/: hkdf.rs  keys.rs  mnemonic.rs  mod.rs  pairing.rs  util.rs
src/crypto/media/: dimension_gate.rs  mod.rs  sanitize.rs
src/keystore/: android.rs  mod.rs
src/networking/: ohttp.rs
tauri-plugin-privacysuite/: Cargo.toml
tauri-plugin-privacysuite/src/: commands.rs
