[workspace]
members = [".", "tauri-plugin-privacysuite", "privacysuite-ffi"]
resolver = "2"

[package]
name = "privacysuite-core-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Zero-knowledge cryptographic foundation for BoomLeft applications"
authors = ["BoomLeft LLC"]
license = "Proprietary"
repository = "https://github.com/mkfnch/PrivacySuite-Core-SDK"
publish = false

[features]
default = ["auth"]
auth = ["dep:opaque-ke"]
storage = ["dep:rusqlite"]
sync = ["dep:automerge", "dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:serde", "dep:serde_json"]
networking = ["dep:hickory-resolver", "dep:tokio-socks", "dep:tokio"]
full = ["auth", "storage", "sync", "networking"]

[dependencies]
# --- Crypto primitives (always available) ---
# SECURITY: All crypto dependencies pinned to exact versions to prevent supply chain attacks.
argon2 = "=0.5"
chacha20poly1305 = "=0.10"
zeroize = "=1.7"
rand = "=0.8"
sha2 = "=0.10"
hmac = "=0.12"
pbkdf2 = "=0.12"
subtle = "=2"

# --- Device pairing + signing (always available) ---
x25519-dalek = "=2"
ed25519-dalek = "=2"
blake3 = "=1"
base64 = "=0.22"

# --- Encrypted storage (optional: "storage" feature) ---
rusqlite = { version = "=0.36", features = ["bundled-sqlcipher"], optional = true }

# --- CRDT sync (optional: "sync" feature) ---
automerge = { version = "=0.8", optional = true }

# --- OPAQUE authentication (optional: "auth" feature) ---
opaque-ke = { version = "=3", optional = true }

# --- Privacy networking + sync (optional: "sync" / "networking" features) ---
tokio = { version = "=1", features = ["rt", "net", "io-util", "sync", "time", "macros"], optional = true }
hickory-resolver = { version = "=0.25", features = ["https-ring"], optional = true }
tokio-tungstenite = { version = "=0.26", features = ["native-tls"], optional = true }
futures-util = { version = "=0.3", default-features = false, features = ["sink"], optional = true }
tokio-socks = { version = "=0.5", optional = true }

# --- Serialization (optional: "sync" feature) ---
serde = { version = "=1", features = ["derive"], optional = true }
serde_json = { version = "=1", optional = true }

[dev-dependencies]
# SECURITY: Dev dependencies also pinned to prevent test environment drift.
tempfile = "=3"
tokio = { version = "=1", features = ["rt", "net", "io-util", "sync", "time", "macros"] }
serde = { version = "=1", features = ["derive"] }
serde_json = "=1"
hex = "=0.4"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_results = "deny"
elided_lifetimes_in_paths = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
mem_forget = "deny"
large_stack_arrays = "warn"
indexing_slicing = "warn"
pedantic = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = true

[profile.dev]
overflow-checks = true
debug = true
